2006-01-25  Christian Persch  <chpe@cvs.gnome.org>

	* data/default-prefs-mozilla.js:

	On suite, set wallet.caveat to false.

2006-01-13  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EventContext.cpp:

	Don't require a HTML document to activate typeaheadfind.
	Bug #326813.

2006-01-11  Christian Persch  <chpe@cvs.gnome.org>

	* data/mime-types-permissions.xml:

	More mime types.

2006-01-08  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-window.c: (ephy_window_delete_event):

	Exit ppv mode when clicking the window close button. Bug #326136.

2006-01-04  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-find-toolbar.c: (set_focus_cb),
	(ephy_find_toolbar_grab_focus), (ephy_find_toolbar_open),
	(ephy_find_toolbar_close):

	Fix warning when Ctrl-F while the find toolbar is already shown.

2006-01-02  Frederic Crozat  <fcrozat@mandriva.com>

	* src/Makefile.am:

	Don't ORBit ship generated files in tarball. Bug #319440.

2005-12-30  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-file-helpers.c: (ephy_file_helpers_init),
	(my_gdk_spawn_make_environment_for_screen),
	(make_spawn_environment_for_sn_context),
	(ephy_file_launch_application), (launch_desktop_item):

	Put a marker in the environment to detect when we launch ourself
	as a helper app. Fixes bug #324828.

2005-12-04  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-find-toolbar.c: (set_status), (clear_status),
	(tab_search_key_press_cb), (entry_key_press_event_cb),
	(entry_activate_cb), (set_focus_cb),
	(ephy_find_toolbar_set_window), (ephy_find_toolbar_init),
	(ephy_find_toolbar_class_init), (ephy_find_toolbar_set_embed),
	(ephy_find_toolbar_open), (ephy_find_toolbar_close),
	(ephy_find_toolbar_request_close):
	* src/ephy-find-toolbar.h:
	* src/ephy-window.c: (sync_tab_document_type),
	(find_toolbar_close_cb), (ephy_window_set_print_preview),
	(ephy_window_get_find_toolbar), (ephy_window_get_context_event):

	Refactor find toolbar closing not to crash with auto-closing popups.