@@ -32,6 +32,9 @@
 #include <nsEmbedString.h>
 #define MOZILLA_INTERNAL_API 1
 
+#define MAX_TITLE_LENGTH	2048
+#define MAX_URL_LENGTH		16384
+
 NS_IMPL_ISUPPORTS1 (MozGlobalHistory, nsIGlobalHistory2)
 
 MozGlobalHistory::MozGlobalHistory ()
@@ -91,6 +94,8 @@ NS_IMETHODIMP MozGlobalHistory::AddURI(nsIURI *aURI, PRBool aRedirect, PRBool aT
 	rv = aURI->GetSpec(spec);
 	NS_ENSURE_TRUE (NS_SUCCEEDED(rv) && spec.Length(), rv);
 
+	if (spec.Length () > MAX_URL_LENGTH) return NS_OK;
+
 	ephy_history_add_page (mGlobalHistory, spec.get());
 	
 	return NS_OK;
@@ -101,9 +106,13 @@ NS_IMETHODIMP MozGlobalHistory::IsVisited(nsIURI *aURI, PRBool *_retval)
 {
 	NS_ENSURE_ARG (aURI);
 
+	*_retval = PR_FALSE;
+
 	nsEmbedCString spec;
 	aURI->GetSpec(spec);
 
+	if (spec.Length () > MAX_URL_LENGTH) return NS_OK;
+	
 	*_retval = ephy_history_is_page_visited (mGlobalHistory, spec.get());
 	
 	return NS_OK;
@@ -114,14 +123,24 @@ NS_IMETHODIMP MozGlobalHistory::SetPageTitle(nsIURI *aURI, const nsAString & aTi
 {
 	NS_ENSURE_ARG (aURI);
 
-	nsEmbedCString title;
-	NS_UTF16ToCString (nsEmbedString (aTitle),
-			   NS_CSTRING_ENCODING_UTF8, title);
-
 	nsEmbedCString spec;
 	aURI->GetSpec(spec);
+
+	if (spec.Length () > MAX_URL_LENGTH) return NS_OK;
 	
-	ephy_history_set_page_title (mGlobalHistory, spec.get(), title.get());
+	/* This depends on the assumption that 
+	 * typeof(PRUnichar) == typeof (gunichar2) == uint16,
+	 * which should be pretty safe.
+	 */
+	glong n_read = 0, n_written = 0;
+	char *converted = g_utf16_to_utf8 ((gunichar2*) uTitle.get(), MAX_TITLE_LENGTH,
+					&n_read, &n_written, NULL);
+	/* FIXME loop from the end while !g_unichar_isspace (char)? */
+	if (converted == NULL) return NS_OK;
+
+	ephy_history_set_page_title (mGlobalHistory, spec.get(), converted);
+
+	g_free (converted);
 	
 	return NS_OK;
 }
