@@ -1,3 +1,9 @@
+2006-01-30  Christian Persch  <chpe@cvs.gnome.org>
+
+	* embed/mozilla/GlobalHistory.cpp:
+
+	Truncate URI and title strings. Bug #329160.
+
 2006-01-25  Christian Persch  <chpe@cvs.gnome.org>
 
 	* data/default-prefs-mozilla.js:
